--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
@@ -11,5 +11,8 @@
     "AttachStackTrace": true,
     "Debug": true,
     "DiagnosticsLevel": "Error"
+  },
+  "BackgroundProcessing": {
+    "StorageConnectionString": ""
   }
 }
