--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.GuardClauses" Version="3.3.0"/>
     <PackageReference Include="Hangfire" Version="1.8.0-beta3"/>
-    <PackageReference Include="Hangfire.InMemory" Version="0.3.4"/>
+    <PackageReference Include="Hangfire.Mongo" Version="0.7.28"/>
     <PackageReference Include="MediatR" Version="9.0.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0"/>
