--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,24 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
-  dotnet-format:
-    runs-on: ubuntu-latest
+  lint_csharp:
+    runs-on: windows-2019
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
-      - name: Add dotnet-format problem matcher
-        uses: xt0rted/dotnet-format-problem-matcher@v1
+    - name: Setup .NET Core
+      uses: actions/setup-dotnet@v2
+      with:
+        dotnet-version: '6.0.x'
 
-      - name: Restore dotnet tools
-        uses: xt0rted/dotnet-tool-restore@v1
+    - name: Add dotnet-format problem matcher
+      uses: xt0rted/dotnet-format-problem-matcher@v1
 
-      - name: Run dotnet format
-        uses: xt0rted/dotnet-format@v1
+    - name: Install dotnet format
+      run: dotnet tool update --global dotnet-format
+
+    - name: Run dotnet format
+      run: dotnet format --check --verbosity diagnostic
   build:
     name: Build
     runs-on: ubuntu-latest
