--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,12 @@ jobs:
         dotnet-version: '6.x' # SDK Version to use.
     - name: Install sonarscanner-dotnet
       run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner --version 5.4
+    - name: Install dotnet-reportgenerator
+      run: dotnet new tool-manifest && dotnet tool install -g dotnet-reportgenerator-globaltool
     - name: Sonarscanner for dotnet
       run: |
-           dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+           dotnet test --collect:"XPlat Code Coverage"
+           dotnet reportgenerator "-reports:**/TestResults/**/coverage.cobertura.xml" "-targetdir:sonarqubecoverage" "-reporttypes:SonarQube"
            dotnet sonarscanner begin /v:1.${{ github.run_number }} /d:sonar.verbose=true /d:sonar.language=cs /o:"kamilbaczek" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.login="$SONAR_TOKEN" /key:"kamilbaczek_Estimation-Tool" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml" /d:sonar.coverage.exclusions="**Tests*.cs"
            dotnet build
            dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
