--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install sonarscanner-dotnet
       run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner --version 5.4
     - name: Install dotnet-reportgenerator
-      run: dotnet new tool-manifest && dotnet tool install -g dotnet-reportgenerator-globaltool
+      run: dotnet tool install -g dotnet-reportgenerator-globaltool
     - name: Sonarscanner for dotnet
       run: |
            dotnet test --collect:"XPlat Code Coverage"
