--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,11 @@ jobs:
       with:
         dotnet-version: '6.x' # SDK Version to use.
     - name: Install dotnet-reportgenerator
-      run: dotnet tool install --global dotnet-reportgenerator-globaltool
+      run: |
+        dotnet tool install -g dotnet-reportgenerator-globaltool
+        dotnet tool install dotnet-reportgenerator-globaltool --tool-path tools
+        dotnet tool install dotnet-reportgenerator-globaltool
+
     - name: Install sonarscanner-dotnet
       run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner --version 5.4
     - name: Sonarscanner for dotnet
