--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,11 @@ jobs:
       run: |
         dotnet tool install -g dotnet-reportgenerator-globaltool
         dotnet tool install dotnet-reportgenerator-globaltool --tool-path tools
+        dotnet new tool-manifest
         dotnet tool install dotnet-reportgenerator-globaltool
 
     - name: Install sonarscanner-dotnet
-      run: dotnet new tool-manifest && dotnet tool install --global dotnet-sonarscanner --version 5.4
+      run:  dotnet tool install --global dotnet-sonarscanner --version 5.4
     - name: Sonarscanner for dotnet
       run: |
            dotnet test --collect:"XPlat Code Coverage"
