--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
@@ -2,6 +2,9 @@
   "Cors": {
     "Origin": "http://localhost:8080"
   },
+  "WebSockets": {
+    "AllowedOrigins": "http://localhost:8080"
+  },
   "Sentry": {
     "Dsn": "",
     "MaxRequestBodySize": "Always",
