--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Properties/launchSettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Properties/launchSettings.json
@@ -8,20 +8,13 @@
     }
   },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Divstack.Company.Estimation.Tool.Bootstrapper": {
       "commandName": "Project",
       "launchBrowser": false,
       "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "dev"
       }
     }
   }
