--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="5.0.0" />
     </ItemGroup>
