--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Properties/launchSettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "launchUrl": "swagger/index.html",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Local"
+        "ASPNETCORE_ENVIRONMENT": "dev"
       }
     }
   }
