--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Azure.Identity" Version="1.3.0" />
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
+      <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="5.0.0" />
     </ItemGroup>
