--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.AzureAppConfiguration" Version="5.0.0" />
+      <PackageReference Include="Microsoft.FeatureManagement" Version="2.5.1" />
     </ItemGroup>
 
     <ItemGroup>
