--- a/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure.csproj
+++ b/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.Infrastructure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Inquiries.Application\Divstack.Company.Estimation.Tool.Inquiries.Application.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Inquiries.IntegrationsEvents\Divstack.Company.Estimation.Tool.Inquiries.IntegrationsEvents.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Inquiries.Persistance\Divstack.Company.Estimation.Tool.Inquiries.Persistance.csproj" />
