--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj
@@ -10,8 +10,6 @@
     <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="6.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="6.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.System" Version="6.0.0" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="6.0.1-rc2.3" />
-    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="6.0.1-rc2.3" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="6.0.1-rc2.3" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0" />
     <PackageReference Include="Hangfire" Version="1.8.0-beta3" />
@@ -22,7 +20,7 @@
     <PackageReference Include="Microsoft.Data.SqlClient" Version="4.0.0-preview3.21293.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="6.0.3" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.3.0-preview" />
     <PackageReference Include="Sentry.AspNetCore" Version="3.12.0-alpha.1" />
@@ -31,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Inquiries\Divstack.Company.Estimation.Tool.Inquiries.IntegrationsEvents\Divstack.Company.Estimation.Tool.Inquiries.IntegrationsEvents.csproj" />
     <ProjectReference Include="..\Abstractions\Divstack.Company.Estimation.Tool.Shared.Abstractions\Divstack.Company.Estimation.Tool.Shared.Abstractions.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj" />
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj" />
