--- a/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure.csproj
+++ b/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure.csproj
@@ -38,4 +38,8 @@
     <None Remove="Seeders\Request\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\Publish" />
+  </ItemGroup>
+
 </Project>
