--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure/Divstack.Company.Estimation.Tool.Shared.Infrastructure.Azure.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Azure.Identity" Version="1.3.0" />
+      <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0" />
       <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
       <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
