--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper.csproj
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="6.0.0"/>
+    <PackageReference Include="NServiceBus.Extensions.Hosting" Version="1.1.0"/>
   </ItemGroup>
 
   <ProjectExtensions>
