--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application/Divstack.Company.Estimation.Tool.Valuations.Application.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Application/Divstack.Company.Estimation.Tool.Valuations.Application.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0"/>
     <PackageReference Include="Dapper" Version="2.0.78"/>
+    <PackageReference Include="DotNetCore.CAP" Version="6.0.0"/>
     <PackageReference Include="FluentValidation" Version="9.4.0"/>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.4.0"/>
     <PackageReference Include="MediatR" Version="9.0.0"/>
