--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents/Divstack.Company.Estimation.Tool.Valuations.IntegrationsEvents.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Divstack.Company.Estimation.Tool.Valuations.Domain\Divstack.Company.Estimation.Tool.Valuations.Domain.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
+  </ItemGroup>
+
 </Project>
