--- a/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure.csproj
+++ b/Src/Modules/Inquiries/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure/Divstack.Company.Estimation.Tool.Inquiries.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.7.0"/>
+    <PackageReference Include="DotNetCore.CAP" Version="6.0.0"/>
     <PackageReference Include="FluentValidation" Version="9.4.0"/>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.4.0"/>
     <PackageReference Include="MediatR" Version="9.0.0"/>
@@ -16,6 +17,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0"/>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
   </ItemGroup>
 
   <ItemGroup>
@@ -36,10 +38,6 @@
 
   <ItemGroup>
     <None Remove="Seeders\Request\**"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Events\Publish"/>
   </ItemGroup>
 
 </Project>
