--- a/Src/Modules/Payments/Divstack.Company.Estimation.Tool.Payments.IntegrationsEvents/Divstack.Company.Estimation.Tool.Payments.IntegrationsEvents.csproj
+++ b/Src/Modules/Payments/Divstack.Company.Estimation.Tool.Payments.IntegrationsEvents/Divstack.Company.Estimation.Tool.Payments.IntegrationsEvents.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks\Divstack.Company.Estimation.Tool.Shared.DDD.BuildingBlocks.csproj"/>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
+  </ItemGroup>
+
 </Project>
