--- a/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Application/Divstack.Company.Estimation.Tool.Priorities.Application.csproj
+++ b/Src/Modules/Priorities/Divstack.Company.Estimation.Tool.Priorities.Application/Divstack.Company.Estimation.Tool.Priorities.Application.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.4.0"/>
     <PackageReference Include="MediatR" Version="9.0.0"/>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
   </ItemGroup>
 
   <ItemGroup>
