--- a/Src/Modules/Push/Divstack.Company.Estimation.Tool.Push.Payments/Divstack.Company.Estimation.Tool.Push.Payments.csproj
+++ b/Src/Modules/Push/Divstack.Company.Estimation.Tool.Push.Payments/Divstack.Company.Estimation.Tool.Push.Payments.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.9"/>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0"/>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\Divstack.Company.Estimation.Tool.Shared.Infrastructure\Divstack.Company.Estimation.Tool.Shared.Infrastructure.csproj"/>
