--- a/Src/Modules/Push/Divstack.Company.Estimation.Tool.Push.Valuations/Divstack.Company.Estimation.Tool.Push.Valuations.csproj
+++ b/Src/Modules/Push/Divstack.Company.Estimation.Tool.Push.Valuations/Divstack.Company.Estimation.Tool.Push.Valuations.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.9"/>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.1.0"/>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
   </ItemGroup>
 
   <ItemGroup>
