--- a/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Payments/Divstack.Company.Estimation.Tool.Sms.Payments.csproj
+++ b/Src/Modules/Sms/Divstack.Company.Estimation.Tool.Sms.Payments/Divstack.Company.Estimation.Tool.Sms.Payments.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MediatR" Version="9.0.0"/>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0"/>
+    <PackageReference Include="NServiceBus" Version="7.7.3"/>
   </ItemGroup>
 
   <ItemGroup>
