--- a/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
+++ b/Src/Modules/Valuations/Divstack.Company.Estimation.Tool.Valuations.Persistance/Divstack.Company.Estimation.Tool.Valuations.Persistance.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Marten" Version="5.3.1"/>
+    <PackageReference Include="Marten" Version="5.5.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="6.0.3"/>
+    <PackageReference Include="System.Threading.AccessControl" Version="6.0.0"/>
   </ItemGroup>
 
   <ItemGroup>
