--- a/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
+++ b/Src/Bootstrapper/Divstack.Company.Estimation.Tool.Bootstrapper/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Debug",
-      "Microsoft.Hosting.Lifetime": "Debug"
+      "Microsoft.Hosting.Lifetime": "Debug",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information"
     }
   },
   "DateFormat": "f",
