--- a/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
+++ b/Src/Shared/Divstack.Company.Estimation.Tool.Shared.Infrastructure/infrastructure-appsettings.json
@@ -19,7 +19,7 @@
     "StorageConnectionString": ""
   },
   "HealthChecks-UI": {
-    "DisableMigrations": true,
+    "DisableMigrations": false,
     "HealthChecks": [
       {
         "Name": "Estimation Tool - Health Checks",
